--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
             <div class="flex items-center justify-between">
                 <a href="#">
                     <svg height="24" width="146">
-                        <use xlink:href="./img/logo.svg#logo"></use>
+                        <use xlink:href="img/logo.svg#logo"></use>
                     </svg>
                 </a>
                 <button class="nav-toggle cursor-pointer bg-transparent border-0 p-2 md:hidden" aria-controls="main-navigation">
-                    <img src="./img/icon-hamburger.svg" alt="" aria-hidden="true" />
-                    <img class="hidden" src="./img/icon-close.svg" alt="" aria-hidden="true" />
+                    <img src="img/icon-hamburger.svg" alt="" aria-hidden="true" />
+                    <img class="hidden" src="img/icon-close.svg" alt="" aria-hidden="true" />
                     <span class="visually-hidden">Menu</span>
                 </button>
                 <nav role="navigation" class="main-navigation" id="main-navigation">
@@ -56,7 +56,7 @@
                     <button class="button">Get Started</button>
                 </div>
                 <div>
-                    <img src="./img/illustration-intro.svg" alt="" />
+                    <img src="img/illustration-intro.svg" alt="" />
                 </div>
             </div>
         </section>
@@ -104,21 +104,21 @@
                 <div class="mt-24">
                     <ul class="testimonials space-y-16 md:space-y-0">
                         <li>
-                            <img src="./img/avatar-anisha.png" alt="">
+                            <img src="img/avatar-anisha.png" alt="">
                             <h3>Anisha Li</h3>
                             <p>
                                 “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
                             </p>
                         </li>
                         <li>
-                            <img src="./img/avatar-ali.png" alt="">
+                            <img src="img/avatar-ali.png" alt="">
                             <h3>Ali Bravo</h3>
                             <p>
                                 “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
                             </p>
                         </li>
                         <li>
-                            <img src="./img/avatar-richard.png" alt="">
+                            <img src="img/avatar-richard.png" alt="">
                             <h3>Richard Watts</h3>
                             <p>
                                 “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
@@ -149,42 +149,42 @@
             <div class="flex flex-col-reverse justify-between md:flex-col gap-10 md:gap-20">
                 <div class="pb-16 md:pb-0">
                     <svg height="24" width="146">
-                        <use xlink:href="./img/logo.svg#logo"></use>
+                        <use xlink:href="img/logo.svg#logo"></use>
                     </svg>
                 </div>
                 <ul class="flex space-x-3" role="list" aria-label="Social Links">
                     <li>
                         <a href="#" aria-label="facebook">
                             <svg class="social-icon">
-                                <use xlink:href="./img/social-icons-sprite.svg#icon-facebook"></use>
+                                <use xlink:href="img/social-icons-sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" aria-label="youtube">
                             <svg class="social-icon">
-                                <use xlink:href="./img/social-icons-sprite.svg#icon-youtube"></use>
+                                <use xlink:href="img/social-icons-sprite.svg#icon-youtube"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" aria-label="twitter">
                             <svg class="social-icon">
-                                <use xlink:href="./img/social-icons-sprite.svg#icon-twitter"></use>
+                                <use xlink:href="img/social-icons-sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" aria-label="pinterest">
                             <svg class="social-icon">
-                                <use xlink:href="./img/social-icons-sprite.svg#icon-pinterest"></use>
+                                <use xlink:href="img/social-icons-sprite.svg#icon-pinterest"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" aria-label="instagram">
                             <svg class="social-icon">
-                                <use xlink:href="./img/social-icons-sprite.svg#icon-instagram"></use>
+                                <use xlink:href="img/social-icons-sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
