--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
 
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+
     <link rel="stylesheet" href="style.css" />
 
     <title>Front-End Manage Landing Page</title>
