--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Front-End Manage Landing Page</title>
+    <title>FEM | Manage Landing Page</title>
 </head>
 
 <body class="font-body text-blue-primary leading-tight">
